# ofm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: VOUCHED.td
.github/workflows/: ci.yml
assets/: bulma.css  bulma.css.map  bulma.scss
assets/sass/themes/: dark.scss  light.scss  setup.scss
assets/sass/utilities/: derived-variables.scss  initial-variables.scss
spec/: SPEC.md  omp.config.example.yml
spec/core/: execution-loop.md  harness-contract.md  omp-integration.md  orchestration-loop.md  planning-agent.md  pull-request-agent.md  task-and-workspace.md
spec/extra/: auth-and-multi-user.md  chat-ux.md  kanban-board.md  opencodeai-sdk.md  pr-comment-retrigger.md  prompt-and-model-customization.md  refinement-agent.md  yolo-mode.md
spec/extra/harnesses/: oh-my-pi.config.example.yml  oh-my-pi.md  omp.md  opencode.md  overview.md
spec/reference/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
spec/reference/docs/: project.md
spec/reference/shared/providers/: models.ts  (+4 more)
src/: config.rs  lib.rs  logging.rs  main.rs
src/agents/: implementation.rs  mod.rs  planning.rs  pull_request.rs  refinement.rs  review.rs
src/archive/: mod.rs  paths.rs
src/auth/: api_key.rs  jwks.rs  mod.rs  session.rs
src/cli/: agent.rs  mod.rs
src/db/: mod.rs  schema.rs
src/omp/: mod.rs  protocol.rs  session.rs  transcript.rs
src/opencode_sdk/: client.rs  conversation.rs  mod.rs  pool.rs  server.rs  types.rs
src/orchestration/: guards.rs  mod.rs  recovery.rs  state_machine.rs
src/providers/: config.rs  mod.rs  omp_provider.rs  opencode_provider.rs  opencode_sdk_provider.rs  registry.rs  types.rs
src/providers/oh_my_pi/: mod.rs  provider.rs  session.rs
src/rauthy/: mod.rs
src/server/: error.rs  mod.rs  proxy.rs  state.rs
src/server/routes/: admin.rs  agent_configs.rs  agent_flags.rs  agent_runs.rs  auth.rs  conversations.rs  mod.rs  projects.rs  settings.rs  tasks.rs
src/server/ws/: bus.rs  connection.rs  message.rs  mod.rs
src/services/: agent_configs.rs  auth.rs  config_format.rs  mod.rs  projects.rs  session.rs  settings.rs  tasks.rs  transcript.rs
src/webapp/: app.rs  auth.rs  auth_pages.rs  mod.rs
src/webapp/components/: agent_model_select.rs  agent_run_banner.rs  api_key_manager.rs  auth_guard.rs  breadcrumb.rs  chat_input.rs  config_body_editor.rs  conversation_list.rs  markdown_viewer.rs  message_stream.rs  mod.rs  navbar.rs  project_card.rs  task_card.rs  ws_status.rs
src/webapp/islands/: infocard.rs  mod.rs  sso_login.rs  uptime.rs
src/webapp/pages/: board.rs  callback.rs  chat.rs  dashboard.rs  home.rs  login.rs  mod.rs  onboarding.rs  settings.rs  task_detail.rs
src/webapp/shim/: mod.rs  runtime.rs
src/webapp/styles/: app.css  mod.rs
src/worktree/: mod.rs
templates/: implementation.md  plan-template.md  planification.md  pr.md  refinement.md  review.md
tests/: agent_flags_test.rs  agent_runs_test.rs  auth_test.rs  health_test.rs  hiqlite_ports_test.rs  migration_test.rs  omp_provider_test.rs  opencode_provider_test.rs  opencode_sdk_integration_test.rs  projects_test.rs  settings_test.rs  tasks_test.rs  webapp_test.rs  worktree_test.rs
(+37 files in other folders)
