[workspace]
members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/olsonjeffery/ofm"

[package]
name = "ofm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
axum = { version = "0.8", features = ["macros", "ws"] }
hiqlite = { version = "0.13", default-features = false, features = [
  "auto-heal",
  "sqlite",
  "toml",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.7", features = ["fs"] }

# oh-my-pi (omp) subprocess integration
portable-pty = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client for CLI agent subcommand
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }

# Provider abstraction & config merging
async-trait = "0.1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
tokio-stream = "0.1"

# Auth middleware (JWT verification, API key hashing, URL parsing)
jsonwebtoken = "9"
sha2 = "0.10"
base64 = "0.22"
url = "2"
tower = "0.5"

# OAuth PKCE, session cookies, API key generation
rand = "0.8"
cookie = { version = "0.18", features = ["private"] }
hex = "0.4"
axum-extra = { version = "0.10", default-features = false, features = [
  "cookie",
  "cookie-private",
] }

# Leptos SSR webapp
leptos = { version = "0.8", features = ["ssr"] }
leptos_styling = { version = "0.3", features = ["ssr"] }

# Rauthy lifecycle & reverse proxy
bytes = "1"
http-body-util = "0.1"

# Markdown rendering (server-side)
pulldown-cmark = "0.13"

# HTML sanitization for rendered markdown
ammonia = "4"

[features]
ssr = ["leptos/ssr", "leptos_styling/ssr"]
